--- a/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -1,38 +1,13 @@
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
+
+    <div class="container">
+        <div class="card" *ngFor="let usuario of usuarios">
+          <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
+            <p class="card-text">email : {{usuario.email}}</p>
+            <p class="card-text">ID : {{usuario.id}}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-  </div>
+    
+
