--- a/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -1,13 +1,16 @@
+   
+      <div class="card-group">
 
-    <div class="container">
         <div class="card" *ngFor="let usuario of usuarios">
           <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
             <p class="card-text">email : {{usuario.email}}</p>
-            <p class="card-text">ID : {{usuario.id}}</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary">ID : {{usuario.id}}</small>
           </div>
         </div>
+        
       </div>
-    
 
