--- a/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -1,5 +1,20 @@
    
-      <div class="card-group">
+   <div 
+      class="alert alert-info text-center" 
+      *ngIf="loading"
+      role="alert">
+     <h4 class="alert-heading">Cargando...</h4>
+     <p>
+      <i class="fa fa-sync fa-spin -fa-2x"></i>
+     </p>
+     <hr>
+     <p class="mb-0">Alert Description</p>
+   </div>
+
+      <div 
+          class="card-group"
+          *ngIf="!loading"
+          >
 
         <div class="card" *ngFor="let usuario of usuarios">
           <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
