--- a/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -8,6 +8,7 @@
       <i class="fa fa-sync fa-spin -fa-2x"></i>
      </p>
      <hr>
+   </div>
    <div 
       class="alert alert-danger text-center" 
       *ngIf="error"
