--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,14 @@
-<p>usuario works!</p>
+<div class="row">
+    <div class="col-4">
+        <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
+          <p class="card-text">email : {{usuario.email}}</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">ID : {{usuario.id}}</small>
+        </div>
+    </div>
+
+</div>
+
