--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,14 +1,39 @@
-<div class="row">
-    <div class="col-4">
-        <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
-          <p class="card-text">email : {{usuario.email}}</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">ID : {{usuario.id}}</small>
-        </div>
-    </div>
-
+   
+   <div 
+   class="alert alert-info text-center" 
+   *ngIf="loading"
+   role="alert">
+  <h4 class="alert-heading">Cargando...</h4>
+  <p>
+   <i class="fa fa-sync fa-spin -fa-2x"></i>
+  </p>
+  <hr>
+</div>
+<div 
+   class="alert alert-danger text-center" 
+   *ngIf="error"
+   role="alert">
+  <h4 class="alert-heading">Error</h4>
+  <pre>
+   {{error | json }}
+  </pre>
+  <hr>
 </div>
 
+   <div 
+       class="card-group"
+       *ngIf="!loading && error==null"
+       >
+
+     <div class="card">
+       <img [src]="usuario.avatar" class="card-img-top mediana" alt="...">
+       <div class="card-body">
+         <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
+         <p class="card-text">email : {{usuario.email}}</p>
+       </div>
+       <div class="card-footer">
+         <small class="text-body-secondary">ID : {{usuario.id}}</small>
+       </div>
+     </div>
+     
+   </div>
